hphp/test/zend/good/tests/lang/041.php.expectf
foo

Fatal error: Class undefined: B in %s/041.php on line 13
